// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivityElementDifficultyStars should render with 0 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt="Platzhalter-Icon"
      class=" opacity-60"
      data-testid="adaptivity-star-empty"
      src="diffculties-adaptivity-placeholder.svg"
    />
    <img
      alt="Platzhalter-Icon"
      class=" opacity-60"
      data-testid="adaptivity-star-empty"
      src="diffculties-adaptivity-placeholder.svg"
    />
    <img
      alt="Platzhalter-Icon"
      class=" opacity-60"
      data-testid="adaptivity-star-empty"
      src="diffculties-adaptivity-placeholder.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 1 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-easy"
      src="diffculties-adaptivity-easy-required-solved.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-medium"
      src="diffculties-adaptivity-medium-required-solved.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-hard"
      src="diffculties-adaptivity-hard-required-solved-icon.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 1.7976931348623157e+308 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-easy"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-medium"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-hard"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 2 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-easy"
      src="diffculties-adaptivity-easy-required-tried.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-medium"
      src="diffculties-adaptivity-medium-required-tried.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-hard"
      src="diffculties-adaptivity-hard-required-tried.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 3 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-easy"
      src="diffculties-adaptivity-easy-required-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-medium"
      src="diffculties-adaptivity-medium-required-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-hard"
      src="diffculties-adaptivity-hard-required-unsolved-icon.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 4 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-easy"
      src="diffculties-adaptivity-easy-solved.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-medium"
      src="diffculties-adaptivity-medium-solved.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-hard"
      src="diffculties-adaptivity-hard-solved-icon.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 5 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-easy"
      src="diffculties-adaptivity-easy-tried.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-medium"
      src="diffculties-adaptivity-medium-tried.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-hard"
      src="diffculties-adaptivity-hard-tried.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 6 for each difficulty 1`] = `
<div>
  <div
    class="flex h-full items-center"
  >
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-easy"
      src="diffculties-adaptivity-easy-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-medium"
      src="diffculties-adaptivity-medium-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      data-testid="adaptivity-star-hard"
      src="diffculties-adaptivity-hard-unsolved-icon.svg"
    />
  </div>
</div>
`;
